# bank-app

./: Dockerfile  README.md  docker-compose.yml  mongo.yml  pyproject.toml  requirements.txt
.github/workflows/: api-tests.yml  gherkin-scenarios.yml  python-app.yml  unit-tests.yml
app/: AccountSet.py  AccountsRegistry.py  BankAccount.py  CompanyBankAccount.py  Konto.py  KontoFirmowe.py  KontoOsobiste.py  PrivateBankAccount.py  SMTPConnection.py  accounts_registry.py  api.py  bank_account.py  company_bank_account.py  private_bank_account.py
app/api_test/: account_crud.py  account_set.py  account_transfer.py  accounts_registry.py  performance.py
app/features/: account_registry.feature  accounts_registry.feature  private_account_transfers.feature
app/features/steps/: account_registry.py  accounts_registry.py  private_account_transfers.py
app/tests/: test_account_set.py  test_accounts_registry.py  test_accounts_set.py  test_bank_account_transfers.py  test_create_bank_account.py  test_create_company_bank_account.py  test_create_private_bank_account.py  test_history_mail.py  test_loan.py  test_loan_company_account.py  test_loan_private_account.py  test_mail_history.py  test_transfers_history.py
